# pyabtesting

./: .gitignore  Makefile  README.md  pyproject.toml
abtestools/audiences/: __init__.py  _audiences.py
abtestools/campaign/: __init__.py
abtestools/test/: __init__.py
pyabtesting/audiences/: _audiences.py  audiences.py
pyabtesting/test/: abtest.py
tests/: test_pyabtesting.py
